--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     const currentLine = document.getElementById("current-line").querySelector(".input-line");
 
     const commands = {
-      "whoami": "Name: John Doe\nRole: Aspiring Cyber Security Engineer\nGoal: To protect and secure systems.",
+      "whoami": "Name: Stephen Torroba\nRole: Aspiring Cyber Security Engineer\nGoal: To protect and secure systems.",
       "skills": "Python, Linux, Networking, Web Security, Ethical Hacking",
       "projects": "1. Project A\n2. Project B\n3. Project C",
-      "contact": "Email: john@example.com\nLinkedIn: linkedin.com/in/john",
+      "contact": "Email: stephen@torroba.me\nLinkedIn: linkedin.com/in/stephentorroba",
       "help": "Available commands: whoami, skills, projects, contact, help",
       "clear": "clear"
     };
